--- a/painting/Views/Home/Index.cshtml
+++ b/painting/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 {
     <div class="post-masonry col-md-4 col-sm-6">
         <div class="post-thumb">
-            <img src=@item.Image alt="">
+            <img src=@item.Image[0].url alt="">
             <div class="title-over">
                 <h4><a href="#">@item.Title</a></h4>
             </div>
