First steps decoupled and first test

--- a/src/Painting.Website/Views/Home/Index.cshtml
+++ b/src/Painting.Website/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Painting.ViewModel.PaintingViewModel>
+﻿@model IEnumerable<Painting.Website.ViewModel.PaintingViewModel>
 
 @{
     ViewData["Title"] = "Home Page";
